--- a/.env
+++ b/.env
@@ -4,10 +4,11 @@ SKIP_PREFLIGHT_CHECK=true
 UID=1000
 
 REACT_APP_SITE_NAME='Tokslaw'
-REACT_APP_FACEBOOK_LINK='https://www.facebook.com/tokslaw'
+REACT_APP_FACEBOOK_LINK='https://www.facebook.com/tokunbo.lawal.1485'
 REACT_APP_TWITTER_LINK='https://twitter.com/tokslaw/'
 REACT_APP_LINKEDIN_LINK="https://www.linkedin.com/in/toks-lawal/"
 REACT_APP_INSTAGRAM_LINK='https://instagram.com/tokslawdev/'
+REACT_APP_YOUTUBE_LINK='https://www.youtube.com/@tokslawdev'
 REACT_APP_SUPPORT_EMAIL='tokunbolawal4@gmail.com'
 REACT_APP_SUPPORT_PHONE='404 203-8915'
 REACT_APP_SUPPORT_US_ADDRESS='Duluth,GA 30096'
